# AethorBot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/: bot.py  config.py
src/cogs/: admin.py  economy.py  general.py  management.py  minecraft.py  moderation.py  onboarding.py
src/utils/: backup.py  health.py  logger.py  mc_online.py  models.py  modlog.py  mojang.py  players.py  rcon.py  store.py
