[project]
name = "aethorBot"
version = "0.1.0"
description = ""
authors = [
    {name = "Jacob Barr",email = "56100195+jbsparrow@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
package-mode = false
dependencies = [
    "discord-py (>=2.5.2,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "mcstatus (>=12.0.6,<13.0.0)",
    "mcrcon (>=0.7.0,<0.8.0)",
    "pynacl (>=1.6.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py310"


[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # PEP8 naming conventions
    "TCH",  # flake8-type-checking
    "COM8", # flake8-commas linter
    "RUF",  # RUF specific fixes
    "Q",    # flake8-quotes
]

ignore = [
    "N806",   # Uppercase variables in functions
    "E501",   # Suppress line-too-long, let formatter decide
    "COM812", # missing-trailing-comma
    "F401",   # Ignore unused imports
]

[tool.ruff.lint.pydocstyle]
convention = "google"
[tool.poetry.group.dev.dependencies]
ruff = "^0.12.5"

